--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.637.0",
     "@prisma/client": "^5.16.2",
+    "multer": "^1.4.5-lts.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.1.10"
